Fix Password Protection finch feature mismatch

kPasswordFieldOnFocusPinging feature was mistakenly used in checking pinging
status for password reuse study. 
As a result, the effective user pool of password reuse study is the same as
password on focus study (a.k.a SBER and no incognito).

Bug: 750410
Change-Id: I2579f5b5119ccfb68074b735d814dc3c8efa4a75
Reviewed-on: https://chromium-review.googlesource.com/592790
Commit-Queue: Jialiu Lin <jialiul@chromium.org>
Reviewed-by: Nathan Parker <nparker@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490921}
Former-commit-id: c8d36f808bba639cbf37d1bf550c7036419cdbe8