components/safe_browsing/password_protection/password_protection_service.cc
@@ -426,7 +426,7 @@ bool PasswordProtectionService::CanSendPing(const base::Feature& feature,
                                             const GURL& main_frame_url,
                                             bool is_sync_password) {
   RequestOutcome request_outcome = URL_NOT_VALID_FOR_REPUTATION_COMPUTING;
-  if (IsPingingEnabled(kPasswordFieldOnFocusPinging, &request_outcome) &&
+  if (IsPingingEnabled(feature, &request_outcome) &&
       CanGetReputationOfURL(main_frame_url)) {
     return true;
   }
